Added recipe description

--- a/recipes/fajitas.html
+++ b/recipes/fajitas.html
@@ -9,5 +9,19 @@
 <body>
     <h1>Steak Fajitas</h1>
     <img src = "easy-steak-fajitas-small-2.jpg">
+    <h2>Succulent citrus marinated steak fajitas</h2>
+    <p>What's a better weeknight meal than steak fajitas. 
+        Filled with delicious marinated skirt steak, seared veggies, and chorizo.</p>
+    <h2> Description</h2>
+        <ul>
+            <li>1/4 Cup Olive Oil</li>
+            <li>1/4 Cup Orange Juce</li>
+            <li>Juice of One Lime</li>
+            <li>1 tbsp Minced Garlic</li>
+            <li>2 tsp Ground Cumin</li>
+            <li>2 tsp Chili Powder</li>
+            <li>1 tsp Dried Oregano</li>
+            <li>1 tsp Smoke Paprika</li>
+        </ul>
 </body>
 </html>
