added recipe details

--- a/recipes/fajitas.html
+++ b/recipes/fajitas.html
@@ -13,6 +13,7 @@
     <p>What's a better weeknight meal than steak fajitas. 
         Filled with delicious marinated skirt steak, seared veggies, and chorizo.</p>
     <h2> Description</h2>
+    <h3> Marinade</h3>
         <ul>
             <li>1/4 Cup Olive Oil</li>
             <li>1/4 Cup Orange Juce</li>
@@ -23,5 +24,20 @@
             <li>1 tsp Dried Oregano</li>
             <li>1 tsp Smoke Paprika</li>
         </ul>
+    <h3>Meat/Veg</h3>
+        <ul>
+            <li>Skirt Steak (1.5-2lbs</li>
+            <li>Medium Yellow Onion</li>
+            <li>Poblano Pepper</li>
+            <li>Bell Pepper</li>
+            <li>Tortillas and Fixins!</li>
+        </ul>
+    <h2>Steps</h2>
+        <ol>
+            <li>Mix together ingredients for the marinade and marinade the steak in it for at least 2 hours</li>
+            <li>Heat cast iron pan on medium high heat, put in 1 tbsp of vegetable oil, and sear sliced steak</li>
+            <li>When steak is cooked add remove from pan and add in veggies and chorizo sausage</li>
+            <li>Cook until veggies are tender and chorizo is slightly crisped, add back in steak, incorporate and serve!</li>
+        </ol>
 </body>
 </html>
