added recipe details

--- a/recipes/fajitas.html
+++ b/recipes/fajitas.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fajitas</title>
 </head>
 <body>
     <h1>Steak Fajitas</h1>
-    <img src = "easy-steak-fajitas-small-2.jpg">
+    <img src = "./images/easy-steak-fajitas-small-2.jpg">
     <h2>Succulent citrus marinated steak fajitas</h2>
     <p>What's a better weeknight meal than steak fajitas. 
         Filled with delicious marinated skirt steak, seared veggies, and chorizo.</p>
-    <h2> Description</h2>
+    <h2> Ingredients</h2>
     <h3> Marinade</h3>
         <ul>
             <li>1/4 Cup Olive Oil</li>
-            <li>1/4 Cup Orange Juce</li>
+            <li>1/4 Cup Orange Juice</li>
             <li>Juice of One Lime</li>
             <li>1 tbsp Minced Garlic</li>
             <li>2 tsp Ground Cumin</li>
