added recipe links to index

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href = "./recipes/fajitas.html">Steak Fajitas</a>
+    <ul>
+        <a href = "./recipes/fajitas.html">Steak Fajitas</a>
+        <a href = "./recipes/queso.html"">Queso</a>
+        <a href = "./recipes/guacamole.html">Guacamole</a>
+    </ul>
 </body>
 </html>
