added links to return to the home page and the top of the recipe

--- a/recipes/fajitas.html
+++ b/recipes/fajitas.html
@@ -1,17 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fajitas</title>
-</head>
-<body>
-    <h1>Steak Fajitas</h1>
+<main>
+    <div>
+    <h1 id= 'header'>Steak Fajitas</h1>
     <img src = "./images/easy-steak-fajitas-small-2.jpg">
     <h2>Succulent citrus marinated steak fajitas</h2>
     <p>What's a better weeknight meal than steak fajitas. 
         Filled with delicious marinated skirt steak, seared veggies, and chorizo.</p>
+    </div>
+    <div>
     <h2> Ingredients</h2>
     <h3> Marinade</h3>
         <ul>
@@ -32,6 +27,8 @@
             <li>Bell Pepper</li>
             <li>Tortillas and Fixins!</li>
         </ul>
+    </div>
+    <div>
     <h2>Steps</h2>
         <ol>
             <li>Mix together ingredients for the marinade and marinade the steak in it for at least 2 hours</li>
@@ -39,5 +36,8 @@
             <li>When steak is cooked add remove from pan and add in veggies and chorizo sausage</li>
             <li>Cook until veggies are tender and chorizo is slightly crisped, add back in steak, incorporate and serve!</li>
         </ol>
-</body>
-</html>
+        </div>
+        <a href="#header">Return to top</a>
+        <p></p>
+        <a href="../index.html">Return to main page</a>
+</main> 
