--- a/recipes/guacamole.html
+++ b/recipes/guacamole.html
@@ -1,17 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Guacamole</title>
-</head>
-<body>
-    <h1>Guacamole</h1>
+<main>
+    <h1 id = "header">Guacamole</h1>
     <img src = "./images/guac.jpeg">
+    <div>
     <h2>Creamy Guacamole</h2>
     <p>This easy guacamole recipe is quick and simple to make. 
         Great with tortilla chips or as a topping for fajitas!</p>
+    </div>
+    <div>
     <h2> Ingredients</h2>
         <ul>
             <li>2 ripe avocados, peeled and pitted/li>
@@ -21,9 +16,14 @@
             <li>1 lime, juiced</li>
             <li>salt and pepper to taste</li>
         </ul>
+    </div>
+    <div>
     <h2>Steps</h2>
         <ol>
             <li>Combine ingredients in a bowl and enjoy with chips!</li>
         </ol>
-</body>
-</html>
+    </div>
+    <a href="#header">Return to top</a>
+    <p></p>
+    <a href="../index.html">Return to main page</a>
+</main>
