--- a/recipes/queso.html
+++ b/recipes/queso.html
@@ -1,18 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Queso</title>
-</head>
+<main>
 <body>
+    <div>
     <h1>El Toro Cheese Dip</h1>
     <img src = "./images/eltoro.jpg">
     <h2>Smooth Queso.. with a twist!</h2>
     <p>El Toro cheese dip was a favorite in Florence, Alabama. 
         It's great with a big basket of tortilla chips or french fries.</p>
     <h2> Ingredients</h2>
+    </div>
+    <div>
         <ul>
             <li>1/4 tsp paprika</li>
             <li>1/4 tsp garlic powder</li>
@@ -23,11 +19,15 @@
             <li>1 lb original Velveeta cheese</li>
             <li>1 cup milk</li>
         </ul>
+    </div>
     <h2>Steps</h2>
+    <div>
         <ol>
             <li>Mix together ingredients in a microwave safe bowl</li>
             <li>Microwave on high for 5 minutes, stopping every minute to stir</li>
-            <li>Serve and enjoy!</li>  
+            <li>Remove from microwave, serve, and enjoy!</li>
+           
         </ol>
+    </div>
 </body>
-</html>
+</main>
