--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <a href = "./recipes/fajitas.html">Steak Fajitas</a>
-        <a href = "./recipes/queso.html"">Queso</a>
-        <a href = "./recipes/guacamole.html">Guacamole</a>
+        <li><a href = "./recipes/fajitas.html">Steak Fajitas</a></li>
+        <li><a href = "./recipes/queso.html"">Queso</a></li>
+        <li><a href = "./recipes/guacamole.html">Guacamole</a></li>
     </ul>
 </body>
 </html>
